[gd_scene load_steps=5 format=3 uid="uid://blq82newtjpqn"]

[ext_resource type="Texture2D" uid="uid://c2d7uoufqj1ud" path="res://imgs/playable.png" id="1_cpwue"]
[ext_resource type="Script" path="res://playable.gd" id="1_e7kpo"]
[ext_resource type="Script" path="res://path_draw.gd" id="2_ual5j"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_exqv0"]
size = Vector2(10, 10)

[node name="playable" type="Node2D" groups=["playable"]]
script = ExtResource("1_e7kpo")

[node name="path_draw" type="Node2D" parent="."]
z_index = 10
z_as_relative = false
script = ExtResource("2_ual5j")

[node name="Show_Position_Timer" type="Timer" parent="path_draw"]

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
position = Vector2(8, 8)
disable_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="CharacterBody2D"]
z_index = 1
texture = ExtResource("1_cpwue")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
shape = SubResource("RectangleShape2D_exqv0")

[node name="activate_playable_timer" type="Timer" parent="."]

[connection signal="draw_new_path" from="." to="path_draw" method="_on_playable_draw_new_path"]
[connection signal="timeout" from="path_draw/Show_Position_Timer" to="path_draw" method="_on_show_position_timer_timeout"]
[connection signal="timeout" from="activate_playable_timer" to="." method="_on_activate_playable_timer_timeout"]
